traefik/traefik-middlewares.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: default-headers
  namespace: default
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authelia-basic
  namespace: default
spec:
  forwardAuth:
    address: http://192.168.1.95:9091/api/verify?auth=basic # replace auth with your authelia container name
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Groups
      - Remote-Name
      - Remote-Email
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authelia-2fa
  namespace: default
spec:
  forwardAuth:
    address: http://authelia.default.svc.cluster.local/api/verify?rd=https://auth.juicewizerd.com/
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Groups
      - Remote-Name
      - Remote-Email
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: kobo-sync-headers
  namespace: default
spec:
  headers:
    customRequestHeaders:
      X-Scheme: https
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: security-headers
  namespace: default
spec:
  headers:
    customResponseHeaders:
      X-Forwarded-Proto: "https"
      X-Robots-Tag: "none,noarchive,nosnippet,notranslate,noimageindex"
      server: ""
    sslProxyHeaders:
      X-Forwarded-Proto: https
    referrerPolicy: "same-origin"
    hostsProxyHeaders:
      - "X-Forwarded-Host"
    customRequestHeaders:
      X-Forwarded-Proto: "https"
    # customResponseHeaders:
    #   X-Forwarded-Proto: "https"
    contentTypeNosniff: true
    browserXssFilter: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsSeconds: 63072000
    stsPreload: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: cors-headers
  namespace: default
spec:
  headers:
    accessControlAllowMethods:
      - GET
      - OPTIONS
      - PUT
    accessControlAllowOriginList:
      - https://homer.juicewizerd.com/
      - https://auth.juicewizerd.com/
      - http://192.168.1.101:9020
    accessControlAllowHeaders: ["x-api-key, Origin, Authorization"]
    accessControlAllowCredentials: true
    accessControlMaxAge: 100
    addVaryHeader: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: floc-block
  namespace: default
spec:
  headers:
    customResponseHeaders:
      Permissions-Policy: interest-cohort=()
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: test-compress
  namespace: default
spec:
  compress: {}
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: crowdsec
  namespace: default
spec:
  forwardAuth:
    address: http://crowdsec-traefik-bouncer-service.default/api/v1/forwardAuth
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: crowdsec-authelia
  namespace: default
spec:
  chain:
    middlewares:
      - name: crowdsec
      - name: authelia-2fa
