traefik/traefik-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`traefik.example.com`) || Host(`dash.traefik`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
